--- a/shelf/views/brokergroup_form_insert.j2
+++ b/shelf/views/brokergroup_form_insert.j2
@@ -105,6 +105,10 @@
     {{insertmyvar(dVars.nDocSize)}}
 {% endblock %}
 
+{% block nDocuments scoped %}
+    {{insertmyvar(dVars.nDocuments)}}
+{% endblock %}
+
 {% block nGlitchDecay scoped %}
     {{insertmyvar(dVars.nGlitchDecay)}}
 {% endblock %}
@@ -250,6 +254,7 @@ BZZZT!  New news: the min/max inputs hae been removed in favor of
 20171215    RBL Add check and logfilename for Run Detached.
 20180408    RBL Add multivar for nSimLength.
 20180925    RBL Add multivar for ServerDefaultLife.
+20181115    RBL Add multivar for nDocuments.
 
 
 -->
