Add finer grained times for shocks. Remove min/max bounds for copies and lifem. Sort dQuery in broker2 output.

--- a/shelf/views/brokergroup_form_insert.j2
+++ b/shelf/views/brokergroup_form_insert.j2
@@ -106,7 +106,7 @@
 {% endblock %}
 
 {% block nDocuments scoped %}
-    {{insertmyvar(dVars.nDocuments)}}
+    {{insertmultivar(dVars.nDocuments)}}
 {% endblock %}
 
 {% block nGlitchDecay scoped %}
