--- a/shelf/views/brokergroup_form_base.j2
+++ b/shelf/views/brokergroup_form_base.j2
@@ -39,7 +39,53 @@
                 <p>For many options, multiple choices are permitted.  Be careful
                     when selecting multiple choices: the combinations can 
                     generate a very large number of cases.
-                </p><br/>
+                </p>
+                <p>There are <strong>two distinctly different</strong> types of 
+                    simulations, and they require different sets of parameters.
+                    <ul>
+                        <li><b>Modeling Sector Failures:</b> 
+                            <ul>
+                                <li>Choose the baseline number 
+                                    of documents, sector lifetimes, simulation length. </li> 
+                                <li>Leave server default life zero (forever).  <li>Add 
+                                    glitches if desired to impact the sector life 
+                                    expectancies.  </li>
+                                <li>Choose a reasonable number of random
+                                    seeds depending on the accuracy you want.  </li>
+                                <li>Choose
+                                    the desired auditing strategy: type, cycle length 
+                                    (e.g., annual), number of segments if more than one.</li>
+                            </ul>
+                        </li>
+                        <li><b>Modeling Server Failures:</b> 
+                            <ul>
+                                <li>Set the number of documents
+                                    to the low numbers suggested for shock modeling.  </li>
+                                <li>Set the sector lifetime to the highest number, since
+                                    sectors are assumed to be basically immortal for shock 
+                                    modeling.  </li>
+                                <li>Be sure to set the server default 
+                                    lifetime to a nonzero value that you feel is
+                                    a reasonable half-life (or range of half-lives); 
+                                    this is critical for shock modeling.  </li>
+                                <li>Set the shock frequency, the 
+                                    shock impact (typically, 100%), and the span of the
+                                    shocks.  </li>
+                                <li>If the shocks are not to be immediately 
+                                  fatal, set the shock impact and duration.  </li>
+                                <li>Note that
+                                    since shock results are binary -- the entire
+                                    collection is either preserved or lost -- 
+                                    accuracy requires
+                                    a large number of repetitions; set the number of
+                                    random seeds appropriately, at least 100, and
+                                    (currently) up to 10,000.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    
+                </p>
+                <p>Have fun exploring!</p><br/>
             </td></tr>
             <p></p>
         </table>
