Add a couple hi-res pics for shockspan=3 to see if more copies suffice.  Answer: yes, eight copies with weekly auditing, yikes, but that does seem overkill.

--- a/shelf/views/brokergroup_form_base.j2
+++ b/shelf/views/brokergroup_form_base.j2
@@ -274,7 +274,7 @@
 </form>
 
 <p>
-<font face="Arial" size="-2">      Last edited 20190121.1450 </font>
+<font face="Arial" size="-3">      Master last edited 20190225.1550 </font>
 </p>
 
 </body>
