Add new, better pictures and supporting data for finite serverdefaultlife, equivalent to shockspan=1.

--- a/shelf/views/brokergroup_form_base.j2
+++ b/shelf/views/brokergroup_form_base.j2
@@ -274,7 +274,7 @@
 </form>
 
 <p>
-<font face="Arial" size="-3">      Master last edited 20190225.1550 </font>
+<font face="Arial" size="-3">      Master last edited 20191027.2140 </font>
 </p>
 
 </body>
@@ -295,8 +295,10 @@
                  Change nSimLength to multi-select pulldown. 
 20181115    RBL Add nDocuments block.  Hope it fits.  
 20190217    RBL Lengthen logfilename block for easier reading.  
-
+20191027    RBL Add just this comment: the title and blurb for each field
+                 is not in this file, as you would expect; instead
+                 it comes from the .ins3 file for the field.  
+                 I never remember this myself.  Confusing, yes.  
 
 -->
-
 </html>
